[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
exclude = ["tests", "build"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true


[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus_schema"
description = "Public facing models for the various CACTUS APIs"
dynamic = ["version", "readme"]
dependencies = ["cactus_test_definitions>=1.0.0", "dataclass-wizard>=0.35.0,<1"]

[tool.setuptools.dynamic]
version = { attr = "cactus_schema.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[project.optional-dependencies]
dev = ["bandit", "black", "coverage", "flake8", "flake8-bugbear", "mypy"]
test = ["pytest", "assertical"]

[tool.setuptools.package-data]
"cactus_schema" = ["py.typed"]
